# smartesprit

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  etudiants.txt  foyer.txt  interfaceadmin.glade  interfaceadmin.gladep  produit.txt  utilisateurs.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: CRUD.c  CRUD.h  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  captDefectueux.txt  capteur.c  capteur.h  capteur.txt  fonction.c  fonction.h  fonctionmenu.c  fonctionmenu.h  foyer.c  foyer.h  interface.c  interface.c.bak  interface.h  interfaceadmin  listIdDefct.txt  main.c  menu.txt  produit.c  produit.h  reclamation.txt  temperature.txt  tree.c  tree.h
src/.deps/: callbacks.Po  capteur.Po  fonction.Po  fonctionmenu.Po  foyer.Po  produit.Po  produits.Po
